Fix for FF and Safari

--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
       <form>
         <div>
           <label for="date">Date:</label>
-          <input type="date" name="date" id="date" required>
+          <input type="date" name="date" id="date" required placeholder="yyyy-mm-dd">
           </div>
 
           <div>
